After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702095 - System crash when typing a long string in empathy
System crash when typing a long string in empathy
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accessibility
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-06-12 14:12 UTC by Ewan.LEBIDEAU-CANEVET
Modified: 2013-06-26 13:37 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
AccountsDialog: Ellipsize/Truncate account dispaly name (2.15 KB, patch)
2013-06-26 12:03 UTC, Xavier Claessens
none Details | Review

Description Ewan.LEBIDEAU-CANEVET 2013-06-12 14:12:56 UTC
User can notice that writing a big string in empathy will crash the system.

Steps :

1. Boot System
2. Have a fresh user that never started empathy
3. Start Empathy
4. Wait for the window called "Empathy accounts" to appear
5. Fill random data in "First name", "Last Name" and "Nickname"
6. Click "Connect" button
7. Click on "People Nearby" to edit it's name
8. Type a very long string (255+ characters)
9. Press ENTER
10. Observe the crash and the "log out"

Expected outcome

Limited string and system does not crash

Actual outcome

Unlimited string and system crash
Comment 1 Xavier Claessens 2013-06-26 12:03:23 UTC
Created attachment 247812 [details] [review]
AccountsDialog: Ellipsize/Truncate account dispaly name

This fix gnome-shell crash if the name is too big,
because it makes the window huge.
Comment 2 Guillaume Desmottes 2013-06-26 13:25:42 UTC
Review of attachment 247812 [details] [review]:

++ but please split the patch.
The one changing strings can only be merged to master while the other can be merged to 3.8
Comment 3 Xavier Claessens 2013-06-26 13:37:31 UTC
done.