AccountsDialog: Ellipsize/Truncate account dispaly name

This fix gnome-shell crash if the name is too big,
because it makes the window huge.

https://bugzilla.gnome.org/show_bug.cgi?id=702095